force-app/main/default/objects/mk__c/mk__c.object-meta.xml
<CustomObject>
    <label>mk</label>
    <nameField>
        <label>Nome de mk</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>mk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>