force-app/main/default/objects/mk__c/fields/nextFA__c.field-meta.xml
<CustomField>
    <fullName>nextFA__c</fullName>
    <label>nextFA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>