force-app/main/default/objects/mk__c/fields/nextJL__c.field-meta.xml
<CustomField>
    <fullName>nextJL__c</fullName>
    <label>nextJL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>