force-app/main/default/objects/mk__c/fields/numberFA__c.field-meta.xml
<CustomField>
    <fullName>numberFA__c</fullName>
    <label>numberFA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>