force-app/main/default/objects/mk__c/fields/numberJL__c.field-meta.xml
<CustomField>
    <fullName>numberJL__c</fullName>
    <label>numberJL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>