force-app/main/default/objects/mk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>numberFA__c</columns>
    <columns>numberJL__c</columns>
    <columns>nextFA__c</columns>
    <columns>nextJL__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>